# master_thesis_open_source

./: .gitignore  README.md
background/mem_transaction/: .gitignore  CMakeLists.txt  readme.md
background/mem_transaction/figure/: draw_line.py  readme.md
background/mem_transaction/figure/pkg/: brokenaxes.py  readme.md
background/mem_transaction/include/: cache_flush.hpp  gpu_clock.hpp  gpu_error.hpp  time.hpp
background/mem_transaction/include/cuda_metrics/: measureMetricPW.hpp
background/mem_transaction/src/: measure_bw.cu  measure_lat.cu  memory_testsuite.cu
background/mem_transaction/src/backup/: generate_dummy_code.py  launch_empty_kernel.cu  memory_bandwidth.cu  memory_transcation.cu  ptx_memory_bandwidth.cu  ptx_memory_transaction.cu  understand_transaction_l1_function_call.h
background/mem_transaction/utils/: generate_ptx.sh  generate_sass.sh
chapter_3/spmv_basic/: common.cuh  kernel.cuh  main.cu
chapter_3/spmv_o1/: CMakeLists.txt  kernel.cuh  main.cu  utils.cu
chapter_3/spmv_o2/: kernel.cuh  main.cu  run_profile.sh  utils.cuh
chapter_3/topo_analyse/: download_datasets.py
chapter_4/: readme.md  run_container.sh  run_profile.sh
chapter_4/spmv_basic/: kernel.cuh  main.cu  profile.cuh
chapter_4/spmv_o1/: CMakeLists.txt  kernel.cuh  main.cu
chapter_4/spmv_o2/: main.cu
chapter_4/topo_analyse/: .gitignore
chapter_5/: CMakeLists.txt
chapter_5/CUDAmop/: README.md
chapter_5/include/topk/: sb_perwarp_heap_topk.cuh
chapter_5/profiling/topk/: main.cu
