# cmake version
cmake_minimum_required(VERSION 3.16.3)

# project info
project(CUDAop LANGUAGES CXX CUDA)

# set executable output path
set(PATH_EXECUTABLE bin)
execute_process( COMMAND ${CMAKE_COMMAND} -E make_directory ../${PATH_EXECUTABLE})
SET(EXECUTABLE_OUTPUT_PATH ../${PATH_EXECUTABLE})

# set library output path
set(PATH_LIBRARY lib)
execute_process( COMMAND ${CMAKE_COMMAND} -E make_directory ../${PATH_LIBRARY})
SET(LIBRARY_OUTPUT_PATH ../${PATH_LIBRARY})

# find CUDA Toolkit Extension library
set(CUDA_TOOLKIT_ROOT_DIR /usr/local/cuda-12.1)
find_library(CUDA_NVTX_LIBRARY
  NAMES nvToolsExt nvTools nvtoolsext nvtools nvtx NVTX
  PATHS "${CUDA_CUDART_LIBRARY_DIR}" "${CUDA_TOOLKIT_ROOT_DIR}" ENV LD_LIBRARY_PATH
  PATH_SUFFIXES "lib64" "common/lib64" "common/lib" "lib"
  DOC "Location of the CUDA Toolkit Extension (NVTX) library"
  NO_DEFAULT_PATH
)


# ====================== PROFILING PROGRAM ======================
add_executable(spmv_csr main.cu)

# >>> global configuration
set(PROFILING_TARGETS spmv_csr)
foreach( profiling_target ${PROFILING_TARGETS} )
  target_link_libraries(${profiling_target} nvToolsExt -lcublas -lcurand)
  target_compile_features(${profiling_target} PUBLIC cxx_std_17)
  # target_compile_options(
  #   ${profiling_target} PRIVATE
  #   # v100: 70; a100: 80
  #   $<$<COMPILE_LANGUAGE:CUDA>:-gencode arch=compute_70,code=sm_70>
  # )
  set_target_properties(${PROFILING_TARGETS} PROPERTIES CUDA_ARCHITECTURES "70")
endforeach( profiling_target ${PROFILING_TARGETS} )
